# PSP

./: .gitmodules  .hgignore  CMakeLists.txt  HEADER  README  build.html  build_on_shark.sh  dist_helmholtz.html  dist_uniform_grid.html  examples.html  genindex.html  index.html  indices.html  intro.html  objects.inv  search.html  searchindex.js  tests.html
_sources/: dist_helmholtz.txt  dist_uniform_grid.txt  examples.txt  intro.txt  tests.txt
cmake/: config.h.cmake  psp_sub.cmake  pspvariables.cmake
cmake/toolchains/: BGP-xl_apr2011-essl_4.3.1-1.cmake  BGP-xl_aug2010-essl_4.3.1-1.cmake  BGP-xl_dec2010-essl_4.3.1-1.cmake  Lonestar-intel_11.1-mvapich2_1.6-mkl_10.3.cmake
contrib/MUMPS/: CMakeLists.txt  ChangeLog  Makefile  README  VERSION
contrib/MUMPS/MATLAB/: Makefile  README  dmumps.m  initmumps.m  make.inc  mumpsmex.c  simple_example.m  zmumps.m
contrib/MUMPS/MATLAB/INSTALL/: Makefile.INTEL  Makefile.PGF90  Makefile.SGI32  Makefile.SUN  Makefile.g95
contrib/MUMPS/Make.inc/: Makefile.ALPHA_linux.PAR  Makefile.ALPHA_linux.SEQ  Makefile.ALPHA_true64.PAR  Makefile.ALPHA_true64.SEQ  Makefile.G95.PAR  Makefile.G95.SEQ  Makefile.INTEL.PAR  Makefile.INTEL.SEQ  Makefile.NEC.PAR  Makefile.NEC.SEQ  Makefile.SGI.PAR  Makefile.SGI.SEQ  Makefile.SP.PAR  Makefile.SP.SEQ  Makefile.SP64.PAR  Makefile.SP64.SEQ  Makefile.SUN.PAR  Makefile.SUN.SEQ  Makefile.gfortran.PAR  Makefile.gfortran.SEQ  Makefile.inc.generic  Makefile.inc.generic.SEQ  Makefile.zorn.PAR
contrib/MUMPS/PORD/lib/: Makefile  bucket.c  gbisect.c  gelim.c  minpriority.c  symbfac.c
contrib/MUMPS/SCILAB/: README  builder.sce  initmumps.sci  intmumpsc.c
contrib/MUMPS/examples/: Makefile  c_example.c  csimpletest.F  cz_example.c  dsimpletest.F  ssimpletest.F  zsimpletest.F
contrib/MUMPS/libseq/: Makefile
contrib/MUMPS/src/: Makefile
contrib/ParMetis/: CMakeLists.txt  VERSION
contrib/ParMetis/ParMETISLib/: CMakeLists.txt  akwayfm.c  ametis.c  balancemylink.c  csrmatch.c  defs.h  diffutil.c  gkmetis.c  grsetup.c  initbalance.c  initmsection.c  initpart.c  kmetis.c  kwaybalance.c  kwayfm.c  lmatch.c  match.c  mdiffusion.c  mdrivers.c  memory.c  mesh.c  mmetis.c  move.c  msetup.c  node_refine.c  ometis.c  order.c  proto.h  pspases.c  redomylink.c  remap.c  rmetis.c  serial.c  stat.c  util.c  wave.c  weird.c  xyzpart.c
doc/: Makefile  make.bat
doc/source/: build.rst  conf.py  dist_helmholtz.rst  dist_uniform_grid.rst  examples.rst  index.rst  intro.rst  tests.rst
examples/: Overthrust-sideways.cpp  Overthrust.cpp
include/: psp.hpp  sweeper.hpp
include/psp/: abstract_hmatrix.hpp  blas.hpp  compressed_block_ldl.hpp  compressed_block_ldl_solve.hpp  compressed_block_lower_solve.hpp  compressed_front_tree.hpp  config.h.cmake  dense_matrix.hpp  discretization.hpp  dist_compressed_front_tree.hpp  dist_helmholtz.hpp  dist_low_rank_matrix.hpp  dist_quasi2d_hmat.hpp  dist_quasi2d_hmatrix.hpp  dist_shared_low_rank_matrix.hpp  dist_spectral_helmholtz.hpp  dist_uniform_grid.hpp  dist_vector.hpp  environment.hpp  factor_matrix.hpp  finite_diff_control.hpp  finite_diff_sweeping_pc.hpp  finite_difference_control.hpp  flat_matrices.hpp  grid_data.hpp  hmat.hpp  hmat_tools.hpp  hmatrix.hpp  hmatrix_quasi2d.hpp  hmatrix_tools.hpp  hmatrix_util.hpp  lapack.hpp  low_rank_matrix.hpp  mpi.hpp  mumps_interface.hpp  quasi2d_hmat.hpp  quasi2d_hmatrix.hpp  shared_dense_matrix.hpp  shared_low_rank_matrix.hpp  shared_quasi2d_hmatrix.hpp  (+4 more)
include/sweeper/: finite_difference_control.hpp  mumps_interface.hpp
scripts/: GatherData.m  InterpolateData.m  ProcessVti.sh  SpreadData.m
src/: DistHelmholtz.cpp  DistQuasi2dHMatrix.cpp  Environment.cpp  FiniteDiffSweepingPC.cpp  HMatrix_Quasi2d.cpp  Quasi2dHMatrix.cpp  SharedQuasi2dHMatrix.cpp  SplitQuasi2dHMatrix.cpp  finite_diff_box.cpp  finite_diff_sweeping_pc.cpp  global.cpp  mumps_interface.cpp
src/DistHelmholtz/: InitializeFinalize-incl.hpp  Multiply-incl.hpp  Precondition-incl.hpp  Solve-incl.hpp
src/DistQuasi2dHMat/: Adjoint-incl.hpp  Conjugate-incl.hpp  Copy-incl.hpp  DistQuasi2dHMat.cpp  Ghost-incl.hpp  MultiplyDense-incl.hpp  MultiplyHMat-incl.hpp  MultiplyHMatCompress-incl.hpp  MultiplyHMatFHH-incl.hpp  MultiplyHMatFormGhostRanks-incl.hpp  MultiplyHMatMain-incl.hpp  MultiplyHMatParallelQR-incl.hpp  MultiplyHMatUpdates-incl.hpp  MultiplyVector-incl.hpp  RedistQuasi2dHMat-incl.hpp  Scale-incl.hpp  SetToRandom-incl.hpp  Transpose-incl.hpp
src/DistQuasi2dHMatrix/: DistQuasi2dHMatrix.cpp  Ghost-incl.hpp  MapDenseMatrix-incl.hpp  MapHMatrix-incl.hpp  MapVector-incl.hpp  RedistQuasi2dHMatrix-incl.hpp
src/HMatrix/: BuildMaps.cpp
src/Quasi2dHMat/: Invert-incl.hpp  MultiplyDense-incl.hpp  MultiplyHMat-incl.hpp  MultiplyVector-incl.hpp  Pack-incl.hpp  Quasi2dHMat.cpp  SetToRandom-incl.hpp
src/Quasi2dHMatrix/: Invert-incl.hpp  MapDenseMatrix-incl.hpp  MapHMatrix-incl.hpp  MapVector-incl.hpp  Pack-incl.hpp  Quasi2dHMatrix.cpp
src/SplitQuasi2dHMatrix/: MapDenseMatrix-incl.hpp  MapVector-incl.hpp  SplitQuasi2dHMatrix.cpp
src/building_blocks/: environment.cpp  lcg.cpp  random.cpp
src/hmat/: Compress.cpp  FactorFactorMatAdd.cpp  FactorFactorMatAddRounded.cpp  FactorFactorMatMult.cpp  MatAdd.cpp  MatAddRounded.cpp  MatMult.cpp  MatVec.cpp
src/hmat_tools/: Add.cpp  AdjointMultiplyMatrix.cpp  AdjointMultiplyVector.cpp  Compress.cpp  ConvertSubmatrix.cpp  Invert.cpp  MultiplyMatrix.cpp  MultiplyVector.cpp  PackedQR.cpp  RoundedAdd.cpp  RoundedUpdate.cpp  TransposeMultiplyMatrix.cpp  TransposeMultiplyVector.cpp  Update.cpp
src/hmatrix_tools/: BuildMaps.cpp  Compress.cpp  ConvertSubmatrix.cpp  Invert.cpp  MatrixAdd.cpp  MatrixAddRounded.cpp  MatrixAdjointMatrix.cpp  MatrixAdjointVector.cpp  MatrixHermitianTransposeMatrix.cpp  MatrixHermitianTransposeVector.cpp  MatrixMatrix.cpp  (+10 more)
test/: BasicTest.cpp  PanelTest.cpp  PetscTest.cpp  ScaLAPACK-Cholesky.cpp
tests/: EngquistYing-flat.cpp  EngquistYing.cpp  Interpolate.cpp  Random.cpp  Uniform.cpp  UnitCube.cpp
util/: MapNaturalToParallel.m  PermuteNaturalToParallel.m  PermuteParallelToNatural.m  PetscAsciiToMatlab.pl  PlotHStructure.m
(+130 files in other folders)
